[package]
name = "umngqusho"
version = "0.1.0"
authors = ["Daniel Standage <daniel.standage@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2.2"
bio = "*"
rand = "0.7.3"
rand_xorshift = "0.2.0"
